2006-09-26:
	- comment out the getRequiredBackport code because we will
	  not use Breaks for the dapper->edgy upgrade yet 
          (see #54234 for the rationale)
	- bugfixes
2006-09-23:
	- support fetching backports of selected packages first and
	  use them for the upgrade (needed to support Breaks)
	- fetch/use apt/dpkg/python-apt backports for the upgrade
2006-09-06:
	- increased the "free-space-savety-buffer" to 100MB
2006-09-05:
	- added "RemoveEssentialOk" option and put "sysvinit" into it
2006-09-04:
	- set Debug::pkgDepCache::AutoInstall as debug option too
	- be more robust against failure from the locales
	- remove libgl1-mesa (no longer needed on edgy)
2006-09-03:
	- fix in the cdromupgrade script path detection
2006-09-01:
	- make the cdromupgrade wrapper work with the compressed version
          of the upgrader as put onto the CD
	- uploaded
2006-08-30:
	- fixes to the cdromupgrade wrapper
2006-08-29:
	- always enable the "main" component to make sure it is available
	- add download estimated time
	- add --cdrom switch to make cdrom based dist-upgrades possible
	- better error reporting
	- moved the logging into the /var/log/dist-upgrade/ dir
	- change the obsoletes calculation when run without network and
          consider demotions as obsoletes then (because we can't really
	  use the "pkg.downloadable" hint without network)
	- uploaded
2006-08-18: 
	- sort the demoted software list
2006-07-31:
	- updated to edgy
	- uploadedd
2006-05-31: 
	- fix bug in the free space calculation (#47092)
	- updated ReleaseAnnouncement
	- updated translations
	- fix a missing bindtextdomain
	- fix a incorrect ngettext usage
	- added quirks handler to fix nvidia-glx issue (#47017)
          Thanks to the amazing Kiko for helping improve this!
2006-05-24: 
	- if the initial "update()" fails, just exit, don't try
          to restore the old sources.list (nothing was modified yet)
          Ubuntu: #46712
	- fix a bug in the sourcesList rewriting (ubuntu: #46245)