@@ -1,331 +1,42 @@
-# demoted packages in dapper
-base-config
-bazaar
-bonobo
-cfengine-doc
-cpp-3.3-doc
-cyrus21-admin
-cyrus21-clients
-cyrus21-common
-cyrus21-dev
-cyrus21-doc
-cyrus21-imapd
-cyrus21-murder
-cyrus21-pop3d
-dasher
-drac-dev
-gcj-4.0
-gconf
-gdk-imlib1
-gij-4.0
-glade-common-2
-glife
-gnome-bin
-gnome-dev-doc
-gnome-libs-data
-gossip
-gstreamer0.8-aa
-gstreamer0.8-alsa
-gstreamer0.8-artsd
-gstreamer0.8-audiofile
-gstreamer0.8-caca
-gstreamer0.8-cdparanoia
-gstreamer0.8-doc
-gstreamer0.8-dv
-gstreamer0.8-dvd
-gstreamer0.8-esd
-gstreamer0.8-festival
-gstreamer0.8-flac
-gstreamer0.8-gnomevfs
-gstreamer0.8-gsm
-gstreamer0.8-hermes
-gstreamer0.8-jpeg
-gstreamer0.8-mikmod
-gstreamer0.8-misc
-gstreamer0.8-musepack
-gstreamer0.8-oss
-gstreamer0.8-plugin-apps
-gstreamer0.8-sdl
-gstreamer0.8-sid
-gstreamer0.8-speex
-gstreamer0.8-theora
-gstreamer0.8-tools
-gstreamer0.8-vorbis
-gstreamer0.8-x
-gtkglarea5
-gtkglarea5-dev
-hermes1
-hermes1-dev
-ifrename
-imlib-base
-initrd-tools
-ivman
-jackd
-jikes
-kerberos4kth-dev
-konserve
-kuser
-kwifimanager
-laptop-mode
-lib32gcj6
-liba52-0.7.4
-liba52-0.7.4-dev
-libart-dev
-libart2
-libaspell15c2
-libbonobo-dev
-libbonobo2
-libcrimson-java
-libcrimson-java-doc
-libcyrus-imap-perl21
-libdb1-compat
-libdirectfb-0.9-22
-libdirectfb-dev
-libdts-dev
-libefs-dev
-libefs1
-libesd0
-libgcj6
-libgcj6-awt
-libgcj6-dev
-libgconf-cil
-libgconf-dev
-libgconf11
-libgd-dev
-libgd-noxpm-dev
-libgd-xpm-dev
-libgd1-noxpm
-libgd1-xpm
-libgdchart-gd1-noxpm
-libgdchart-gd1-noxpm-dev
-libgdchart-gd1-xpm
-libgdchart-gd1-xpm-dev
-libgdk-pixbuf-dev
-libgdk-pixbuf-gnome-dev
-libgdk-pixbuf-gnome2
-libgdk-pixbuf2
-libggi-target-x
-libggi2
-libggi2-dev
-libgii0
-libgii0-dev
-libgii0-target-x
-libglade-cil
-libglade-gnome0
-libglade-gnome0-dev
-libglade0
-libglade0-dev
-libglib-cil
-libglide2
-libglide2-dev
-libglide3
-libglide3-dev
-libgnome-cil
-libgnome-dev
-libgnome32
-libgnomeprint-bin
-libgnomeprint-data
-libgnomeprint-dev
-libgnomeprint15
-libgnomesupport0
-libgnomeui32
-libgnorba-dev
-libgnorba27
-libgnorbagtk0
-libgnutls11
-libgnutls11-dev
-libgstreamer-gconf0.8-0
-libgstreamer-gconf0.8-dev
-libgstreamer-plugins0.8-0
-libgstreamer-plugins0.8-dev
-libgstreamer0.8-0
-libgstreamer0.8-dev
-libgtk-cil
-libgtkxmhtml-dev
-libgtkxmhtml1
-libkadm1-kerberos4kth
-libkafs0-kerberos4kth
-libkdb-1-kerberos4kth
-libkpathsea-dev
-libkpathsea3
-libkrb-1-kerberos4kth
-libkthacl1-kerberos4kth
-libloudmouth1-0
-libloudmouth1-dev
-libmms-dev
-libmms0
-libmpeg-dev
-libmpeg-doc
-libmpeg1
-libmpeg2-4
-libmpeg2-4-dev
-libmpeg3-1
-libmpeg3-dev
-libmysqlclient10
-libmysqlclient10-dev
-libmysqlclient12
-libmysqlclient12-dev
-libmysqlclient14
-libmysqlclient14-dev
-libneon24
-libneon24-dev
-libnetpbm9
-libnetpbm9-dev
-liboaf-dev
-liboaf0
-libopenal-dev
-libopenal0
-libopenh323-dbg
-libopenh323-dev
-libopenh323-doc
-liborbit-dev
-liborbit0
-libosmesa6
-libosmesa6-dev
-libotp0-kerberos4kth
-libpixman1
-libpng3-dev
-libpq3
-libpsiconv-dev
-libpsiconv5
-libpth-dbg
-libpth-dev
-libpth2
-libreadline4
-libroken16-kerberos4kth
-libsablot0
-libsablot0-dev
-libsidplay1
-libsidplay1-dev
-libsigc++-1.2-5c2
-libsigc++-1.2-dev
-libsl0-kerberos4kth
-libsnmp4.2
-libsnmp4.2-dev
-libss0-kerberos4kth
-libssl0.9.7
-libstdc++5-3.3-dbg
-libstdc++5-3.3-doc
-libswfdec0.3
-libswfdec0.3-dev
-libwww-dev
-libwww-ssl-dev
-libwww-ssl0
-libxine1c2
-libxosd-dev
-libxosd2
-libxp-java
-libzvt-dev
-libzvt2
-mozilla-browser
-mozilla-dev
-mozilla-locale-ca
-mozilla-locale-cy
-mozilla-locale-da
-mozilla-locale-de-at
-mozilla-locale-el
-mozilla-locale-es-es
-mozilla-locale-eu
-mozilla-locale-fr
-mozilla-locale-hu
-mozilla-locale-it
-mozilla-locale-ja
-mozilla-locale-ko
-mozilla-locale-lt
-mozilla-locale-no-nb
-mozilla-locale-pl
-mozilla-locale-ptbr
-mozilla-locale-sl
-mozilla-locale-tr
-mozilla-psm
-mpack
-multiseat
-oaf
-orbit
-passivetex
-plone
-plone-site
-postgresql
-postgresql-7.4
-postgresql-8.0
-postgresql-client
-postgresql-client-7.4
-postgresql-client-8.0
-postgresql-contrib
-postgresql-contrib-7.4
-postgresql-contrib-8.0
-postgresql-dev
-postgresql-doc
-postgresql-doc-7.4
-postgresql-doc-8.0
-postgresql-plperl-7.4
-postgresql-plperl-8.0
-postgresql-plpython-7.4
-postgresql-plpython-8.0
-postgresql-pltcl-7.4
-postgresql-pltcl-8.0
-python-gdchart
-python-gst
-python-opengl
-python-osd
-python-sip4-qt3
-python2.3
-python2.3-dev
-python2.3-imaging
-python2.3-tk
-python2.3-xml
-python2.4-opengl
-python2.4-osd
-sane-utils
-tspc
-ubuntu-express
-vim-gtk
-xchat
-xchat-common
-xmltex
-xserver-xorg-input-acecad
-xserver-xorg-input-aiptek
-xserver-xorg-input-calcomp
-xserver-xorg-input-citron
-xserver-xorg-input-digitaledge
-xserver-xorg-input-dmc
-xserver-xorg-input-dynapro
-xserver-xorg-input-fpit
-xserver-xorg-input-hyperpen
-xserver-xorg-input-magellan
-xserver-xorg-input-microtouch
-xserver-xorg-input-mutouch
-xserver-xorg-input-palmax
-xserver-xorg-input-penmount
-xserver-xorg-input-spaceorb
-xserver-xorg-input-summa
-xserver-xorg-input-tek4957
-xserver-xorg-input-void
-zope-atcontenttypes
-zope-atrbw
-zope-btreefolder2
-zope-cmf1.5
-zope-cmfactionicons1.5
-zope-cmfcalendar1.5
-zope-cmfcore1.5
-zope-cmfdefault1.5
-zope-cmfdynamicviewfti
-zope-cmfformcontroller
-zope-cmfplone
-zope-cmfquickinstallertool
-zope-cmfsetup1.5
-zope-cmftopic1.5
-zope-cmfuid1.5
-zope-dcworkflow1.5
-zope-extendedpathindex
-zope-groupuserfolder
-zope-kupu
-zope-linguaplone
-zope-ploneerrorreporting
-zope-plonelanguagetool
-zope-plonetranslations
-zope-pts
-zope-resourceregistries
-zope-securemailhost
-zope2.8
-zope2.8-sandbox
+# demoted packages
+blender
+bluez-pcmcia-support
+courier-authdaemon
+courier-base
+courier-doc
+courier-imap
+courier-imap-ssl
+courier-pop
+courier-pop-ssl
+courier-ssl
+ftgl-dev
+lam4-dev
+lam4c2
+libgd-gd2-noxpm-perl
+libgmime2.1
+libgmime2.1-cil
+libgnutls12
+libmpich1.0-dev
+libmpich1.0c2
+libnetcdf++3
+libnetcdf3
+libpgtcl-dev
+libpgtcl1.5
+libreiserfs0.3-0
+libreiserfs0.3-dbg
+libreiserfs0.3-dev
+libunicode-string-perl
+libxaw6
+libxaw6-dbg
+mono-classlib-2.0
+mpi-doc
+mpich-bin
+netcdfg-dev
+python-netcdf
+python-parted
+python-pgsql
+python-scientific-doc
+sdf-doc
+tcl8.0
+tcl8.0-dev
+tk8.0
