@@ -2,6 +2,7 @@
 	- comment out the getRequiredBackport code because we will
 	  not use Breaks for the dapper->edgy upgrade yet 
           (see #54234 for the rationale)
+	- updated demotions.cfg for dapper->edgy
 	- bugfixes
 2006-09-23:
 	- support fetching backports of selected packages first and
